--- a/package.json
+++ b/package.json
@@ -12,11 +12,13 @@
     "@fortawesome/fontawesome-free": "^6.5.2",
     "@heroicons/react": "2.0.18",
     "@material-tailwind/react": "2.1.4",
+    "@reduxjs/toolkit": "^2.2.5",
     "prop-types": "15.8.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^5.2.1",
     "react-modal": "^3.16.1",
+    "react-redux": "^9.1.2",
     "react-router-dom": "6.17.0",
     "react-slick": "^0.30.2",
     "slick-carousel": "^1.8.1",
